--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -83,16 +83,16 @@
 
         new Typewriter('#typewriter', {
             delay: 20,
-        }).typeString('Hey there, I\'m Cyris 👋')
+        }).typeString('Hey there, I\'m James 👋')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a software developer 👨‍💻')
+            .typeString('I\'m a bioinformatician 👨‍💻')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a maker 🏗')
+            .typeString('I\'m a functional genomics expert 🧬')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m an infosec enthusiast 🔒')
+            .typeString('I\'m a machine learning enthusiast 🤖')
             .pauseFor(3000)
             .deleteAll(10)
             .typeString('Check out my work 👇')
@@ -106,17 +106,14 @@
             .pauseFor(2000)
             .deleteAll(10)
             .pauseFor(1000)
-            .typeString('Javascript, NodeJS, React, Express.')
+            .typeString('Python, R, bash shell.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('RaspberryPi, Arduino, ESP8266, ESP32.')
-            .pauseFor(2000)
-            .deleteAll(10)
-            .typeString('Learning to protect myself and others.')
+            .typeString('Learning to apply AI/ML to biomedical challenges.')
             .pauseFor(3000)
             .deleteAll(10)
             .pauseFor(200)
-            .typeString('Follow me on twitter @sudo_overflow.')
+            .typeString('Follow me on Twitter @Sacco_jf.')
             .pauseFor(4000)
             .start();
     </script>
