--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -109,7 +109,7 @@
             .typeString('Python, R, bash shell.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('Learning to apply AI/ML to biomedical challenges.')
+            .typeString('Learning to apply AI to biomedical challenges.')
             .pauseFor(3000)
             .deleteAll(10)
             .pauseFor(200)
