--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -106,7 +106,7 @@
             .pauseFor(2000)
             .deleteAll(10)
             .pauseFor(1000)
-            .typeString('Python, R, bash shell.')
+            .typeString('Python, R, Linux.')
             .pauseFor(2000)
             .deleteAll(10)
             .typeString('Learning to apply AI to biomedical challenges.')
