--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -109,6 +109,9 @@
             .typeString('Python, R, Linux.')
             .pauseFor(2000)
             .deleteAll(10)
+            .typeString('CRISPR, single cell analysis, gene regulation.')
+            .pauseFor(2000)
+            .deleteAll(10)
             .typeString('Learning to apply AI to biomedical challenges.')
             .pauseFor(3000)
             .deleteAll(10)
