--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <!-- 
@@ -86,13 +87,13 @@
         }).typeString('Hey there, I\'m James 👋')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a bioinformatician 👨‍💻')
+            .typeString('I\'m a software developer 👨‍💻')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a functional genomics expert 🧬')
+            .typeString('I\'m a maker 🏗')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a machine learning enthusiast 🤖')
+            .typeString('I\'m an infosec enthusiast 🔒')
             .pauseFor(3000)
             .deleteAll(10)
             .typeString('Check out my work 👇')
@@ -106,17 +107,17 @@
             .pauseFor(2000)
             .deleteAll(10)
             .pauseFor(1000)
-            .typeString('Python, R, Linux.')
+            .typeString('Javascript, NodeJS, React, Express.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('CRISPR, single cell analysis, gene regulation.')
+            .typeString('RaspberryPi, Arduino, ESP8266, ESP32.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('Learning to apply AI to biomedical challenges.')
+            .typeString('Learning to protect myself and others.')
             .pauseFor(3000)
             .deleteAll(10)
             .pauseFor(200)
-            .typeString('Follow me on Twitter @Sacco_jf.')
+            .typeString('Follow me on twitter @sudo_overflow.')
             .pauseFor(4000)
             .start();
     </script>
