new html file for updated gif

--- a/GIFCreator/index.html
+++ b/GIFCreator/index.html
@@ -84,19 +84,19 @@
 
         new Typewriter('#typewriter', {
             delay: 20,
-        }).typeString('Hey there, I\'m James 👋')
+        }).typeString('Hey there, I\'m James')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a software developer 👨‍💻')
+            .typeString('I\'m a bioinformatician')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m a maker 🏗')
+            .typeString('I\'m a scientist')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('I\'m an infosec enthusiast 🔒')
+            .typeString('I\'m an AI enthusiast')
             .pauseFor(3000)
             .deleteAll(10)
-            .typeString('Check out my work 👇')
+            .typeString('Check out my work')
             .pauseFor(4000)
             .start();
 
@@ -107,17 +107,17 @@
             .pauseFor(2000)
             .deleteAll(10)
             .pauseFor(1000)
-            .typeString('Javascript, NodeJS, React, Express.')
+            .typeString('CRISPR & single cell omics.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('RaspberryPi, Arduino, ESP8266, ESP32.')
+            .typeString('Python, R, Linux.')
             .pauseFor(2000)
             .deleteAll(10)
-            .typeString('Learning to protect myself and others.')
+            .typeString('Python ML frameworks.')
             .pauseFor(3000)
             .deleteAll(10)
             .pauseFor(200)
-            .typeString('Follow me on twitter @sudo_overflow.')
+            .typeString('Follow me on Twitter @Sacco_jf.')
             .pauseFor(4000)
             .start();
     </script>
